examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__statements__future_import_statements.snap
---
source: examples/ast-python/src/tests/corpus/statements.rs
expression: "get_ast(& db, file)"
---
ParsedAst {
    nodes: [
        Module {
            children: [
                AstNodeId {
                    id: 1,
                    _marker: PhantomData<ast_python::generated::CompoundStatement_SimpleStatement>,
                },
                AstNodeId {
                    id: 4,
                    _marker: PhantomData<ast_python::generated::CompoundStatement_SimpleStatement>,
                },
                AstNodeId {
                    id: 7,
                    _marker: PhantomData<ast_python::generated::CompoundStatement_SimpleStatement>,
                },
            ],
            _range: Range {
                start_byte: 1,
                end_byte: 180,
                start_point: Point {
                    row: 1,
                    column: 0,
                },
                end_point: Point {
                    row: 5,
                    column: 0,
                },
            },
            _id: 0,
            _parent: None,
            _is_missing: false,
        },
        SimpleStatement(
            FutureImportStatement(
                FutureImportStatement {
                    name: [
                        AstNodeId {
                            id: 2,
                            _marker: PhantomData<ast_python::generated::AliasedImport_DottedName>,
                        },
                    ],
                    _range: Range {
                        start_byte: 1,
                        end_byte: 39,
                        start_point: Point {
                            row: 1,
                            column: 0,
                        },
                        end_point: Point {
                            row: 1,
                            column: 38,
                        },
                    },
                    _id: 1,
                    _parent: Some(
                        0,
                    ),
                    _is_missing: false,
                },
            ),
        ),
        DottedName(
            DottedName {
                children: [
                    AstNodeId {
                        id: 3,
                        _marker: PhantomData<ast_python::generated::Identifier>,
                    },
                ],
                _range: Range {
                    start_byte: 24,
                    end_byte: 39,
                    start_point: Point {
                        row: 1,
                        column: 23,
                    },
                    end_point: Point {
                        row: 1,
                        column: 38,
                    },
                },
                _id: 2,
                _parent: Some(
                    1,
                ),
                _is_missing: false,
            },
        ),
        Identifier {
            _range: Range {
                start_byte: 24,
                end_byte: 39,
                start_point: Point {
                    row: 1,
                    column: 23,
                },
                end_point: Point {
                    row: 1,
                    column: 38,
                },
            },
            _id: 3,
            _parent: Some(
                2,
            ),
            _is_missing: false,
        },
        SimpleStatement(
            FutureImportStatement(
                FutureImportStatement {
                    name: [
                        AstNodeId {
                            id: 5,
                            _marker: PhantomData<ast_python::generated::AliasedImport_DottedName>,
                        },
                    ],
                    _range: Range {
                        start_byte: 40,
                        end_byte: 70,
                        start_point: Point {
                            row: 2,
                            column: 0,
                        },
                        end_point: Point {
                            row: 2,
                            column: 30,
                        },
                    },
                    _id: 4,
                    _parent: Some(
                        0,
                    ),
                    _is_missing: false,
                },
            ),
        ),
        DottedName(
            DottedName {
                children: [
                    AstNodeId {
                        id: 6,
                        _marker: PhantomData<ast_python::generated::Identifier>,
                    },
                ],
                _range: Range {
                    start_byte: 63,
                    end_byte: 70,
                    start_point: Point {
                        row: 2,
                        column: 23,
                    },
                    end_point: Point {
                        row: 2,
                        column: 30,
                    },
                },
                _id: 5,
                _parent: Some(
                    4,
                ),
                _is_missing: false,
            },
        ),
        Identifier {
            _range: Range {
                start_byte: 63,
                end_byte: 70,
                start_point: Point {
                    row: 2,
                    column: 23,
                },
                end_point: Point {
                    row: 2,
                    column: 30,
                },
            },
            _id: 6,
            _parent: Some(
                5,
            ),
            _is_missing: false,
        },
        SimpleStatement(
            FutureImportStatement(
                FutureImportStatement {
                    name: [
                        AstNodeId {
                            id: 8,
                            _marker: PhantomData<ast_python::generated::AliasedImport_DottedName>,
                        },
                        AstNodeId {
                            id: 10,
                            _marker: PhantomData<ast_python::generated::AliasedImport_DottedName>,
                        },
                        AstNodeId {
                            id: 12,
                            _marker: PhantomData<ast_python::generated::AliasedImport_DottedName>,
                        },
                        AstNodeId {
                            id: 14,
                            _marker: PhantomData<ast_python::generated::AliasedImport_DottedName>,
                        },
                    ],
                    _range: Range {
                        start_byte: 71,
                        end_byte: 179,
                        start_point: Point {
                            row: 3,
                            column: 0,
                        },
                        end_point: Point {
                            row: 4,
                            column: 41,
                        },
                    },
                    _id: 7,
                    _parent: Some(
                        0,
                    ),
                    _is_missing: false,
                },
            ),
        ),
        DottedName(
            DottedName {
                children: [
                    AstNodeId {
                        id: 9,
                        _marker: PhantomData<ast_python::generated::Identifier>,
                    },
                ],
                _range: Range {
                    start_byte: 95,
                    end_byte: 110,
                    start_point: Point {
                        row: 3,
                        column: 24,
                    },
                    end_point: Point {
                        row: 3,
                        column: 39,
                    },
                },
                _id: 8,
                _parent: Some(
                    7,
                ),
                _is_missing: false,
            },
        ),
        Identifier {
            _range: Range {
                start_byte: 95,
                end_byte: 110,
                start_point: Point {
                    row: 3,
                    column: 24,
                },
                end_point: Point {
                    row: 3,
                    column: 39,
                },
            },
            _id: 9,
            _parent: Some(
                8,
            ),
            _is_missing: false,
        },
        DottedName(
            DottedName {
                children: [
                    AstNodeId {
                        id: 11,
                        _marker: PhantomData<ast_python::generated::Identifier>,
                    },
                ],
                _range: Range {
                    start_byte: 112,
                    end_byte: 120,
                    start_point: Point {
                        row: 3,
                        column: 41,
                    },
                    end_point: Point {
                        row: 3,
                        column: 49,
                    },
                },
                _id: 10,
                _parent: Some(
                    7,
                ),
                _is_missing: false,
            },
        ),
        Identifier {
            _range: Range {
                start_byte: 112,
                end_byte: 120,
                start_point: Point {
                    row: 3,
                    column: 41,
                },
                end_point: Point {
                    row: 3,
                    column: 49,
                },
            },
            _id: 11,
            _parent: Some(
                10,
            ),
            _is_missing: false,
        },
        DottedName(
            DottedName {
                children: [
                    AstNodeId {
                        id: 13,
                        _marker: PhantomData<ast_python::generated::Identifier>,
                    },
                ],
                _range: Range {
                    start_byte: 122,
                    end_byte: 136,
                    start_point: Point {
                        row: 3,
                        column: 51,
                    },
                    end_point: Point {
                        row: 3,
                        column: 65,
                    },
                },
                _id: 12,
                _parent: Some(
                    7,
                ),
                _is_missing: false,
            },
        ),
        Identifier {
            _range: Range {
                start_byte: 122,
                end_byte: 136,
                start_point: Point {
                    row: 3,
                    column: 51,
                },
                end_point: Point {
                    row: 3,
                    column: 65,
                },
            },
            _id: 13,
            _parent: Some(
                12,
            ),
            _is_missing: false,
        },
        DottedName(
            DottedName {
                children: [
                    AstNodeId {
                        id: 15,
                        _marker: PhantomData<ast_python::generated::Identifier>,
                    },
                ],
                _range: Range {
                    start_byte: 162,
                    end_byte: 178,
                    start_point: Point {
                        row: 4,
                        column: 24,
                    },
                    end_point: Point {
                        row: 4,
                        column: 40,
                    },
                },
                _id: 14,
                _parent: Some(
                    7,
                ),
                _is_missing: false,
            },
        ),
        Identifier {
            _range: Range {
                start_byte: 162,
                end_byte: 178,
                start_point: Point {
                    row: 4,
                    column: 24,
                },
                end_point: Point {
                    row: 4,
                    column: 40,
                },
            },
            _id: 15,
            _parent: Some(
                14,
            ),
            _is_missing: false,
        },
    ],
}
