examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__statements__global_statements@global a, b.snap
---
source: src/tests/corpus/statements.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            GlobalStatement(
                GlobalStatement {
                    children: [
                        Identifier {
                            [RANGE]
                        },
                        Identifier {
                            [RANGE]
                        },
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
