examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__statements__if_else_statements@if a  belif c  delse  f.snap
---
source: src/tests/corpus/statements.rs
expression: module
---
Module {
    children: [
        CompoundStatement(
            IfStatement(
                IfStatement {
                    condition: PrimaryExpression(
                        Identifier(
                            Identifier {
                                [RANGE]
                            },
                        ),
                    ),
                    consequence: Block {
                        alternative: [],
                        children: [
                            SimpleStatement(
                                ExpressionStatement(
                                    ExpressionStatement {
                                        children: [
                                            Expression(
                                                PrimaryExpression(
                                                    Identifier(
                                                        Identifier {
                                                            [RANGE]
                                                        },
                                                    ),
                                                ),
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                            ),
                        ],
                        [RANGE]
                    },
                    alternative: [
                        ElifClause(
                            ElifClause {
                                condition: PrimaryExpression(
                                    Identifier(
                                        Identifier {
                                            [RANGE]
                                        },
                                    ),
                                ),
                                consequence: Block {
                                    alternative: [],
                                    children: [
                                        SimpleStatement(
                                            ExpressionStatement(
                                                ExpressionStatement {
                                                    children: [
                                                        Expression(
                                                            PrimaryExpression(
                                                                Identifier(
                                                                    Identifier {
                                                                        [RANGE]
                                                                    },
                                                                ),
                                                            ),
                                                        ),
                                                    ],
                                                    [RANGE]
                                                },
                                            ),
                                        ),
                                    ],
                                    [RANGE]
                                },
                                [RANGE]
                            },
                        ),
                        ElseClause(
                            ElseClause {
                                body: Block {
                                    alternative: [],
                                    children: [
                                        SimpleStatement(
                                            ExpressionStatement(
                                                ExpressionStatement {
                                                    children: [
                                                        Expression(
                                                            PrimaryExpression(
                                                                Identifier(
                                                                    Identifier {
                                                                        [RANGE]
                                                                    },
                                                                ),
                                                            ),
                                                        ),
                                                    ],
                                                    [RANGE]
                                                },
                                            ),
                                        ),
                                    ],
                                    [RANGE]
                                },
                                [RANGE]
                            },
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
