examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__statements__if_else_statements@if a b.snap
---
source: src/tests/corpus/statements.rs
expression: module
---
Module {
    children: [
        CompoundStatement(
            IfStatement(
                IfStatement {
                    condition: PrimaryExpression(
                        Identifier(
                            Identifier {
                                [RANGE]
                            },
                        ),
                    ),
                    consequence: Block {
                        alternative: [],
                        children: [
                            SimpleStatement(
                                ExpressionStatement(
                                    ExpressionStatement {
                                        children: [
                                            Expression(
                                                PrimaryExpression(
                                                    Identifier(
                                                        Identifier {
                                                            [RANGE]
                                                        },
                                                    ),
                                                ),
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                            ),
                        ],
                        [RANGE]
                    },
                    alternative: [],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
